--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -3,12 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         tools:context="com.pffair.flexibletable.MainActivity">
 
-    <ListView android:layout_width="match_parent"
-              android:id="@+id/lv_list"
-              android:layout_height="match_parent">
-
-    </ListView>
+    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+              android:text="123aesdfsdaf"/>
 </RelativeLayout>
