--- a/app/src/main/res/layout/list_header.xml
+++ b/app/src/main/res/layout/list_header.xml
@@ -3,12 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         tools:context="com.pffair.flexibletable.MainActivity">
 
-    <ListView android:layout_width="match_parent"
-              android:id="@+id/lv_list"
-              android:layout_height="match_parent">
-
-    </ListView>
+    <com.pffair.flexibletable.FlexibleTable
+            android:layout_width="match_parent"
+            android:id="@+id/ftl_layout"
+            android:background="@color/colorPrimaryDark"
+            android:layout_height="match_parent"/>
 </RelativeLayout>
